<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/imageButton_prev"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:contentDescription="@string/previous_step_image_content_description"
            app:srcCompat="@drawable/ic_arrow_back_24dp" />

        <TextView
            android:id="@+id/tv_navigation"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/steps_navigation"
            android:textSize="@dimen/text_sz_extra_large"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton_next"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:contentDescription="@string/next_step_image_content_description"
            app:srcCompat="@drawable/ic_arrow_forward_24dp" />
    </LinearLayout>

</RelativeLayout>